# improved_dCTIDH

./: CMakeLists.txt  README.md  analyze_bench.py  benchmark.py  benchmark_adx.py  benchmark_normal.py  benchmark_time.py
.CMake/: compiler_options.cmake
greedy/: memoized.py  optimal_strat.py  prime_search.sage  primes_151_225.txt
main/: CMakeLists.txt  checkct.c  csidh.c  ctidh.c
new_primes/: README.md
new_primes/genFiles/: Makefile  chain.py  csidh.c  fp.h  sqr.s  validate.c
new_primes/genSteps/: autogen  ctidh.c  greedy  poly.c  proj.h  random.c  randombytes.c  test.c  tunecycles.c
scripts/greedy/: calculate_cost.py  costisog.py  cxl_greedy.py  greedywombats.py  memorize_wombat.py  optimal_strat.py  requirements.txt  rough_greedy.py  test.py  test_strategy.py
scripts/new_primes/: README.md
scripts/new_primes/genFiles/: AsmKaratsubaCodegenerator.py  AsmMultCodegenerator.py  Makefile  autogen  fp_ctidh.h  fp_namespace.h  primes2047m1l226.c  uintbig.h
scripts/new_primes/genFiles/files/: fp2047m4l207.s  fp2047m7l188.s  fp_inv2047m4l207.c  fp_inv2047m7l188.c  fp_sqrt2047m4l207.c  fp_sqrt2047m7l188.c  primes.h  primes2047m1l226.c  primes2047m4l207.c  primes2047m7l188.c  uintbig2047m4l207.s  uintbig2047m7l188.s
scripts/new_primes/genSteps/: Makefile  autogen  bench.c  chain.py  checkct.c  ctidh.h  elligator.c  memoized.py  mont.c  package  primes.h  testrandom.c  tunemults.c  uintbig_namespace.h
src/: CMakeLists.txt  secsidh.h  secsidhconfig.h.cmake
src/CTIDH/: ctidh.c  ctidh.h  ctidh_api.c  ctidh_api.h  ctidh_wombat_eval.c
src/common/: mont.c  mont.h  primes.h  primes2047m1l226.c  primes2047m4l205.c  primes2047m6l194.c  primes2047m7l188.c  random.c  random.h  rng.c  skgen.c  steps.c  steps.h  steps_tunemults2047m1l226.c  steps_untuned.c  uintbig2047m1l226.s  uintbig2047m4l205.s  uintbig2047m6l194.s  uintbig2047m7l188.s  validate.c
src/common/fp/: fp-counters.c  fp2.c  fp2.h  fp2047m1l226.s  fp_inv2047m1l226.c  fp_inv2047m4l205.c  fp_inv2047m6l194.c  fp_inv2047m7l188.c  fp_sqrt2047m1l226.c  fp_sqrt2047m4l205.c  fp_sqrt2047m6l194.c  fp_sqrt2047m7l188.c  namespace_asm.py
src/common/fp/gmp/: fp-gmp.h
src/common/fp/karatsuba/: fp-karatsuba.c  fp-karatsuba.h  fp2047m1l226.s  fp2047m4l205.s  fp2047m6l194.s  fp2047m7l188.s
templates/: index.html
